--- a/views/admin/editCoupon.ejs
+++ b/views/admin/editCoupon.ejs
@@ -306,9 +306,15 @@ if (validTo === "") {
     $("#couponValidToError").text("Valid To date is required");
     event.preventDefault();
 } else {
-    // Check if validTo is not less than validFrom
-    if (new Date(validTo) < new Date(validFrom)) {
-        $("#couponValidToError").text("Valid To date must be equal or later than Valid From date");
+
+        var currentDate = new Date();
+        var enteredValidToDate = new Date(validTo);
+
+        if (enteredValidToDate < currentDate) {
+          $("#couponValidToError").text("ValidTo date cannot be in the past (expired),  Please enter a valid date");
+          event.preventDefault();
+        } else if (new Date(validTo) < new Date(validFrom)) {
+        $("#couponValidToError").text("Valid To date must be equal or greater than Valid From date");
         event.preventDefault();
     }
 }
